[fix] delivery partner APIs
